Fix misalignment of home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,8 @@ nav {
 }
 nav h1 {
   margin: auto;
+	padding-top: 1.2em;
+	padding-bottom: 1.2em;
 }
 nav h1 a {
   color: #fff;
@@ -106,7 +108,8 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
+	padding:  5px;
   background-color: #3397DB;
   align-items: center;
 }
